--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,32 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <%= link_to posts_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    All Posts
+  <% end %>
+  <%= link_to edit_post_path(@post), class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-pencil"></span>
+    Edit
+  <% end %>
+  <h1>Show post</h1>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<dl class="dl-horizontal">
+  <dt>Title:</dt>
+  <dd><%= @post.title %></dd>
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+  <dt>Body:</dt>
+  <dd><%= @post.body %></dd>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+</dl>
+
+<h3>Comments</h3>
+<div id="comments">
+  <%= render partial: "comments/form", locals: { commentable: @post } %>
+  <% if params[:comment] %>
+    <p>Single comment thread. <%= link_to "View all comments", url_for() %></p>
+  <% end %>
+  <%= render @comments, continue_thread: 5 %>
+</div>
+
+<br />
+<%= paginate @comments %>
