--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,6 +25,7 @@
   <% if params[:comment] %>
     <p>Single comment thread. <%= link_to "View all comments", url_for() %></p>
   <% end %>
+  <%= render @post.comments %>
   <%# <%= render @comments, continue_thread: 5 %>
 </div>
 
