added hidden field form partial

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,5 +2,5 @@
   <%= comment.user.name %> posted
   <%= simple_format comment.body %>
 
-  <%= render partial: "comments/form", locals: { commentable: @post, parent_id: comment.id } %>
+  <%= render partial: "comments/form", locals: { commentable: @post, parent_id: comment.id, class: 'd-none' } %>
 </div>
