--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,9 +1,23 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <%= link_to discussions_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    All Discussions
+  <% end %>
+  <%= link_to edit_discussion_path(@discussion), class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-pencil"></span>
+    Edit
+  <% end %>
+  <h1>Show discussion</h1>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @discussion.title %>
-</p>
+<dl class="dl-horizontal">
+  <dt>Title:</dt>
+  <dd><%= @discussion.title %></dd>
 
-<%= link_to 'Edit', edit_discussion_path(@discussion) %> |
-<%= link_to 'Back', discussions_path %>
+</dl>
+
+<h3>Comments</h3>
+<div id="comments">
+  <%= render partial: "comments/form", locals: { commentable: @discussion } %>
+  <%= render @discussion.comments.where(parent_id: nil) %>
+</div>
