--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,13 +7,12 @@
 
   <div data-controller='reply'>
     <small>
-      <%= nesting > max_nesting %>
       <%= link_to 'Reply', '#', data: { action: 'click->reply#toggle' } %>
       <%= link_to 'Delete', [comment.commentable, comment], method: :delete, data: { confirm: 'Are you sure?' } if comment.user == current_user %>
     </small>
     <%= render partial: "comments/form", locals: {
       commentable: comment.commentable,
-      parent_id: (nesting < max_nesting ? comment.id : comment.parent_id),
+      parent_id: reply_to_comment_id(comment, nesting, max_nesting),
       class: 'd-none',
       target: 'reply.form'
       } %>
