--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -18,7 +18,9 @@
       } %>
   </div>
 
-  <div id="comments">
+  <%# comments %>
+  <%# comment_44_comments %>
+  <%= tag.div id: "#{dom_id(comment)}_comments" do %>
     <%= render comment.comments, nesting: nesting + 1, max_nesting: local_assigns[:max_nesting] %>
-  </div>
+  <% end %>
 </div>
