--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -22,5 +22,6 @@
   <%# comment_44_comments %>
   <%= tag.div id: "#{dom_id(comment)}_comments" do %>
     <%= render comment.comments, nesting: nesting + 1, max_nesting: local_assigns[:max_nesting] %>
+    <%# where the js inserts %>
   <% end %>
 </div>
