--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,11 +1,14 @@
 <% if @comment.parent_id? %>
-  var comments = document.querySelector("#<%= dom_id(@comment.parent) %>_comments")
+    var comments = document.querySelector("#<%= dom_id(@comment.parent) %>_comments")
 <% else %>
-  var comments = document.querySelector("#comments")
+    var comments = document.querySelector("#comments")
 <% end %>
 
-comments.insertAdjacentHTML('beforeend', '<%= j render partial: 'comments/comment', locals: { comment: @comment }, format: :html %>')
+comments.insertAdjacentHTML('beforeend', '<%=j render partial: "comments/comment", locals: { comment: @comment }, format: :html %>')
 
-var form = comments.aprentElement.querySelector("form")
+var form = comments.parentElement.querySelector("form")
 form.reset()
-form.classList.add("d-none")
+
+<% if @comment.parent_id? %>
+  form.classList.add("d-none")
+<% end %>
