--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -26,10 +26,10 @@
   <%# comments %>
   <%# comment_44_comments %>
   <%= tag.div id: "#{dom_id(comment)}_comments" do %>
-    <% if nesting >= 10 && comment.comments.any? %>
+    <% if continue_thread.present? && nesting >= continue_thread && comment.comments.any? %>
       <%= link_to 'Continue this thread', url_for(comment: comment.id, anchor: dom_id(comment)) %>
     <% end %>
-      <%= render comment.comments, nesting: nesting + 1, max_nesting: local_assigns[:max_nesting] %>
+      <%= render comment.comments, continue_thread: continue_thread, nesting: nesting + 1, max_nesting: local_assigns[:max_nesting] %>
       <%# where the js inserts %>
     <% end %>
   <% end %>
